# ChangeLog for app-portage/genlop
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/genlop/ChangeLog,v 1.78 2010/10/19 11:47:35 leio Exp $

  19 Oct 2010; Mart Raudsepp <leio@gentoo.org> genlop-0.30.5.ebuild,
  genlop-0.30.7.ebuild, genlop-0.30.8-r1.ebuild:
  Drop to ~mips

  26 Mar 2009; Raúl Porcel <armin76@gentoo.org> genlop-0.30.7.ebuild,
  genlop-0.30.8.ebuild, genlop-0.30.8-r1.ebuild, genlop-0.30.8-r2.ebuild:
  m68k love, thanks to kolla for testing

  19 Feb 2009; Tiago Cunha <tcunha@gentoo.org> genlop-0.30.8-r2.ebuild:
  stable amd64, bug 259360

  19 Feb 2009; tgall_foo <tgall@gentoo.org> genlop-0.30.8-r2.ebuild:
  stable on ppc64 bug #259360

  19 Feb 2009; nixnut <nixnut@gentoo.org> genlop-0.30.8-r2.ebuild:
  ppc stable #259360

  19 Feb 2009; Raúl Porcel <armin76@gentoo.org> genlop-0.30.8-r2.ebuild:
  alpha/arm/ia64/s390/sh/x86 stable wrt #259360

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> genlop-0.30.8-r2.ebuild:
  Stable for HPPA (bug #259360).

  18 Feb 2009; Ferris McCormick <fmccor@gentoo.org> genlop-0.30.8-r2.ebuild:
  Sparc stable, Bug #259360 --- looks fine.

*genlop-0.30.8-r2 (14 Jan 2009)

  14 Jan 2009; Zac Medico <zmedico@gentoo.org> +genlop-0.30.8-r2.ebuild,
  +files/genlop-0.30.8-compiling-category.patch:
  Bug #254972 - Fix genlop -c to work with both new and old portage.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> genlop-0.30.8-r1.ebuild:
  Stable on mips, per #197215.

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> genlop-0.30.8-r1.ebuild:
  Stable on ppc64; bug #197215

  16 Nov 2007; nixnut <nixnut@gentoo.org> genlop-0.30.8-r1.ebuild:
  Stable on ppc wrt bug 197215

  15 Nov 2007; Samuli Suominen <drac@gentoo.org> genlop-0.30.8-r1.ebuild:
  amd64 stable wrt #197215

  13 Nov 2007; Jeroen Roovers <jer@gentoo.org> genlop-0.30.8-r1.ebuild:
  Stable for HPPA too.

  12 Nov 2007; Raúl Porcel <armin76@gentoo.org> genlop-0.30.8-r1.ebuild: