@@ -6,7 +6,7 @@ DIST genlop-0.30.8.tar.gz 21315 SHA256 944cdfcb9d633dacc4a196039d509e6dc9a22e4ec
 EBUILD genlop-0.30.5.ebuild 729 SHA256 49d10f7222afab187d8a71d5f0bf473461779a11bbdcaf5e46edbd68f4889ef4 SHA512 578bf6ec226d88567e029ac4c02e0c3a513184660d55a09f459f6eff60e4e475c3e375937f2c3a8f6ebf2b83c9138355fe306695fdaa7986bfd9b14e657ae6d2 WHIRLPOOL 92671796cc67229eba732103beac4c7f801108c7998374483cd430ce1a72d6b7b1528dc1b5aed374b2e1bd2a72df20936e8d26c9695587fe707c06793aa55743
 EBUILD genlop-0.30.7.ebuild 705 SHA256 c1e3c734dcd7c872fad09b1833038d2aea69f172ce1497445368b0301702d758 SHA512 c7cc2e9c15e8e74d3d440bc3db9dc689372f5fa0e484949d2a6a8785f453ae00629f611e731bca1ca67ee9550d31e4cd905d435c0f2a52acc3af7cee7f364224 WHIRLPOOL 64e6c98e5ad66511beee62973dd9fa41532218b57ce5576b02b20b8e34b68d3cfc5619e0d1f955d60fca776931b66e72c26a51c5ef70b99d8557d5b524a79a17
 EBUILD genlop-0.30.8-r1.ebuild 838 SHA256 37a66610c9db46cfe1ed8e6c0e59c3801a1d44d7089c91ec76663d437e2cc2f4 SHA512 5623d8064e861e6fc00110582e117a6676e5ccd9047eaa16e114a49ccf975881a170b294c85237131de0b9ec6e5c6ca95d9244fdd7fac37959bebf7f489e56e6 WHIRLPOOL b0dc156c02469af8fcf7b67bc5eb898300bc14f10c3034dd91e124a2823ebbd19deb152f7835eb84574ff4a975e3e81630f55755995c5ae49193c851c314aa8b
-EBUILD genlop-0.30.8-r2.ebuild 892 SHA256 9d78c0f750b231f895493f8090ac05119a79cbbf0fe9d5962e584559f077cb03 SHA512 7b41e29f125a5c3771d561bc2011d8c39ca208b4aa281b297ada307b97925c2ac1fed16749cc36a93b300ddc992d7ad10e0e1657fc7d46ea38f13cae393dacd8 WHIRLPOOL a6a882808244738ad3bed093c25411776bde656ea94fe2baa21186dffcbb24d9b414618e36ede280aac4788c5b384d72f4263958bbcd4373e401ad28433c3e3a
+EBUILD genlop-0.30.8-r2.ebuild 901 SHA256 9ed48aed8495f9a918e8751695162dc2382a9f9192c718d3e37a2cba0652a90f SHA512 0f0a0f9da40faf2df4c8325f0dcdc6e86978283f940874020dc2f2b0bbd2e985f7fd5080cead21988a8a6b0ec6da27afb28a5f4644a74f50847fd0d8be9be98d WHIRLPOOL 6f5b11ff79c0337b68c602f424a1bd9d6488274382ccdff56cdbe05ef90ceb6792dc7d1fbd5c1421a21114791fdd8eb0feace6ed984d9b23a330e4d68c59bda6
 EBUILD genlop-0.30.8.ebuild 757 SHA256 6b3e566b7825e7f9c1ac689b4a963a46326b0eabf2ac112aca7c92e52913d2ae SHA512 b4c4aa8a821d2186ef265358b963f1b20a1ebfde703b3bd1fa5c195ab54722003eb3eb90847faeeef5473c30683bd07aa5d5dcfcea1ed70359809f49313caa24 WHIRLPOOL 307392a99edd8246279377c0eaa060918d626da7e2b8d0ca06b5d73cb57526e8fa26c220475802f6bd03413824b4b650b7f75489c08f1705388e776115e3489b
-MISC ChangeLog 9595 SHA256 0554bee6a71d9fdf200b76c11c2941f5f0d30537db06646f4ce3d3dfde0b41fc SHA512 53ef4de3aa85b6b4ccc203cf1ae3e87e088af03f8f81c63c8f7d2207099fc25cd107fff4626fc3fcc3b3a89c874f4da174511d5f46dcf0a8a14672293873fa94 WHIRLPOOL 440a370436ed47464a1719616e9d7163ef3dee24f6c2f049c4b661c2a50e179a57abeb00719c484efcd44659f8963eef1bfc23fa7926a1c1e608bc2dab6fdc2f
+MISC ChangeLog 9688 SHA256 d337bac6755de371bc345242ac7f999fd95d67e3976408da83d95d73de5765ef SHA512 c6d5691dbaef38f78f7a1a27b64c4064303b0fe9a12129f5726b0c1c9d9666e170cf196bb9fd7ce4556bbbe47b491084e2361e90937e18846105657b950a15f1 WHIRLPOOL b09c979211efb3254291a99193eb2ee13975bed6905a187741318f72dcd496730576a9e6ecbe7902c522bdc74d316a61d8064edb3d6733959ba92afa589e0f86
 MISC metadata.xml 167 SHA256 23c7b57a11fced2e2a0c6cf3a15da7b2b58272c50d6b010342e27467cb11dbf1 SHA512 ccb9f25c242254d82affc8dab64d9e4e44e426923ae413aeac749957a06897111ee58603d833e01caa60e904072026574cbe57da6f22e657510db5017418e5bb WHIRLPOOL a75628d3d9d5281676772fd4f662a7672a85d3d5c084dff94b8362e25e0e7f7a774de405514c13b300e1177e370d4a05ba70ea2e21af3ea110635258d6868349
