@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/genlop
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/genlop/ChangeLog,v 1.78 2010/10/19 11:47:35 leio Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/genlop/ChangeLog,v 1.79 2012/07/25 05:08:08 ryao Exp $
+
+  25 Jul 2012; Richard Yao <ryao@gentoo.org> genlop-0.30.8-r2.ebuild:
+  Keyword ~amd64-fbsd
 
   19 Oct 2010; Mart Raudsepp <leio@gentoo.org> genlop-0.30.5.ebuild,
   genlop-0.30.7.ebuild, genlop-0.30.8-r1.ebuild:
